--- a/index.html
+++ b/index.html
@@ -1,14 +1,47 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1">
+
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/css/bootstrap.min.css">
+
+    <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.4.1/jquery.min.js"></script>
+
+    <script src="https://maxcdn.bootstrapcdn.com/bootstrap/3.4.0/js/bootstrap.min.js"></script>
+
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>St. Zavier's school</title>
     <link rel="stylesheet" href="style.css">
-   <script src="main.js"></script>
+    <script src="main.js"></script>
 </head>
 
 <body>
- <nav
+    <nav class="navbar-inverse my_nav_bar">
+     <div class="navbar-header">
+       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#my_nav_bar">
+        <span class="icon-bar"></span> 
+        <span class="icon-bar"></span> 
+           <span class="icon-bar"></span> 
+    </button>
+         <a href="https://codepen.io/Super45coder59/pen/KKWdjXd">Aarush Goradia</a>
+    </div>
+       <div class="collapse navbar-collapse">
+        <li><a href="#About">About the school</a></li>
+           <li><a href="#Achievements">Achievements</a></li>
+           <li><a href="#Staff">Staff</a></li>
+           <li><a href="#History">History</a></li>
+           <li><a href="#Contact">Contact us</a></li>
+        </div> 
+    </nav>
+    <div class="announcement">
+    <marquee id="marqueeStyle" onmouseover="this.stop();" onmouseout="this.start();">
+        Feel free to ask any queries for Willow Creek using this phone number: 720-554-3900
+    </marquee>
+    </div>
 </body>
+
 </html>
