--- a/index.html
+++ b/index.html
@@ -20,7 +20,7 @@
 </head>
 
 <body>
-    <nav class="navbar-inverse my_nav_bar">
+    <nav class="navbar-inverse my_nav_bar" style="position:sticky;top:0;z-index:99999">
      <div class="navbar-header">
        <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#my_nav_bar">
         <span class="icon-bar"></span> 
