--- a/index.html
+++ b/index.html
@@ -27,7 +27,7 @@
         <span class="icon-bar"></span> 
            <span class="icon-bar"></span> 
     </button>
-         <a href="https://codepen.io/Super45coder59/pen/KKWdjXd">Aarush Goradia</a>
+         <a href="https://www.cherrycreekschools.org/willowcreek">Willow Creek Elementary School</a>
     </div>
        <div class="collapse navbar-collapse">
         <li><a href="#About">About the school</a></li>
