--- a/index.html
+++ b/index.html
@@ -20,45 +20,49 @@
 </head>
 
 <body>
-    <nav class="navbar-inverse my_nav_bar" style="position:sticky;top:0;z-index:99999">
-     <div class="navbar-header">
-       <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#my_nav_bar">
-        <span class="icon-bar"></span> 
-        <span class="icon-bar"></span> 
-           <span class="icon-bar"></span> 
-    </button>
-         <a href="https://www.cherrycreekschools.org/willowcreek">Willow Creek Elementary School</a>
-    </div>
-       <div class="collapse navbar-collapse">
-        <li><a href="#About">About the school</a></li>
-           <li><a href="#Achievements">Achievements</a></li>
-           <li><a href="#Staff">Staff</a></li>
-           <li><a href="#History">History</a></li>
-           <li><a href="#Help">Help</a></li>
-           <li><a href="#Contact">Contact us</a></li>
-           
-        </div> 
+    <nav class="navbar-inverse" style="position:sticky;top:0;z-index:99999">
+        <div class="navbar-header">
+            <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+                <span class="icon-bar"></span>
+            </button>
+            <a href="https://www.cherrycreekschools.org/willowcreek">Willow Creek Elementary School</a>
+        </div>
+        <div class="collapse navbar-collapse">
+            <ul class="nav navbar-nav" id="myNavbar">
+                <li><a href="#About">About the school</a></li>
+                <li><a href="#Achievements">Achievements</a></li>
+                <li><a href="#Staff">Staff</a></li>
+                <li><a href="#History">History</a></li>
+                <li><a href="#Help">Help</a></li>
+                <li><a href="#Contact">Contact us</a></li>
+            </ul>
+
+        </div>
     </nav>
-<div class="container">
-    <div class="announcement">
-    <marquee id="marqueeStyle" onmouseover="this.stop();" onmouseout="this.start();">
-        Feel free to ask any queries for Willow Creek using this phone number: 888-888-8887
-    </marquee>
-    </div>
-    <div id="About">
-    <h2>About The School</h2>
-    <h3>Watch this inductory video to understand</h3>
-    <iframe width="560" height="315" src="https://www.youtube.com/embed/aHo8eiVtApI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-    <h4>This is a school that has grades from K-5 and has around 600 kids! It provides excellence with specials and ILC to meet student's needs. This has a 1 hour recess and lunch break. This also has very fun activities, like Tribute to America for 5th grade, Night of the Notables for 3rd grade, and more!</h4>
-    </div>
-    <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="Contact">
-    <h2>Contact Us</h2>
-    </div>
-    <div id="map">
-    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3075.352782865051!2d-104.89060748536177!3d39.574198879472!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876c85cb85775bbb%3A0x55b5dfb7f473bc15!2sWillow%20Creek%20Elementary%20School!5e0!3m2!1sen!2sus!4v1621049304414!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
-    </div>
-    <h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;absrt@gmail.com</h5>
-    <h5><i class="fa fa-phone square"></i>&nbsp;&nbsp;888-888-8888</h5>
+    <div class="container">
+        <div class="announcement">
+            <marquee id="marqueeStyle" onmouseover="this.stop();" onmouseout="this.start();">
+                Feel free to ask any queries for Willow Creek using this phone number: 888-888-8887
+            </marquee>
+        </div>
+        <div id="About">
+            <h2>About The School</h2>
+            <h3>Watch this inductory video to understand</h3>
+            <iframe width="560" height="315" src="https://www.youtube.com/embed/aHo8eiVtApI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+            <h4>This is a school that has grades from K-5 and has around 600 kids! It provides excellence with specials and ILC to meet student's needs. This has a 1 hour recess and lunch break. This also has very fun activities, like Tribute to America for 5th grade, Night of the Notables for 3rd grade, and more!</h4>
+        </div>
+        <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="Contact">
+            <h2>Contact Us</h2>
+        </div>
+        <div id="map">
+            <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3075.352782865051!2d-104.89060748536177!3d39.574198879472!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876c85cb85775bbb%3A0x55b5dfb7f473bc15!2sWillow%20Creek%20Elementary%20School!5e0!3m2!1sen!2sus!4v1621049304414!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
+        </div>
+        <a href="mailto:absrt@gmail.com?Subject=Feedback">
+        <h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;absrt@gmail.com</h5>
+    </a>
+        <h5><i class="fa fa-phone square"></i>&nbsp;&nbsp;8888888888</h5>
     </div>
 </body>
 
