--- a/index.html
+++ b/index.html
@@ -21,13 +21,14 @@
 
 <body>
     <nav class="navbar-inverse" style="position:sticky;top:0;z-index:99999">
+
         <div class="navbar-header">
             <button type="button" class="navbar-toggle" data-toggle="collapse" data-target="#myNavbar">
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a href="https://www.cherrycreekschools.org/willowcreek">Willow Creek Elementary School</a>
+            <a class="navbar-brand" href="https://www.cherrycreekschools.org/willowcreek">Willow Creek Elementary School</a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav" id="myNavbar">
