--- a/index.html
+++ b/index.html
@@ -48,11 +48,64 @@
                 Feel free to ask any queries for Willow Creek using this phone number: 888-888-8887
             </marquee>
         </div>
-        <div id="About">
+        <div class="page-header" id="About">
             <h2>About The School</h2>
             <h3>Watch this inductory video to understand</h3>
             <iframe width="560" height="315" src="https://www.youtube.com/embed/aHo8eiVtApI" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             <h4>This is a school that has grades from K-5 and has around 600 kids! It provides excellence with specials and ILC to meet student's needs. This has a 1 hour recess and lunch break. This also has very fun activities, like Tribute to America for 5th grade, Night of the Notables for 3rd grade, and more!</h4>
+        </div>
+        <div class="page-header" id="History">
+            <h2>History</h2>
+        </div>
+        <div class="row">
+            <div class="travel_mainDiv">
+                <img class="img-responsive" src="download%20(1).jfif">
+                <h4 class="text-capitalize text-left text-muted"><kbd>school was updated</kbd></h4>
+                <hr />
+                <h5 class="text-success text-left text-muted">Upgraded in 2018</h5>
+                <p class="text-left text-muted"><a href="mailto:aarushgoradia18@gmail.com?Subject=Write about update">Write about this</a></p>
+            </div>
+            <div class="travel_mainDiv">
+                <img src="download.jfif" class="img-responsive">
+                <h4 class="text-left text-capitalize text-muted"><kbd>opening of willow creek</kbd></h4>
+                <hr />
+                <h5 class="text-left text-success text-muted">Opened in 1977</h5>
+                <p class="text-left text-muted text-success"><a href="mailto:aarughgoradia18@gmail.com?Subject=Write about opening ">Write about this</a></p>
+            </div>
+            <div class="travel_mainDiv">
+                <img class="img-responsive" src="download%20(1).png">
+                <h4 class="text-capitalize text-left text-muted"><kbd>19 students got 300% or more in accelerated reader</kbd></h4>
+                <hr />
+                <h5 class="text-success text-left text-muted">Achieved this in 2018</h5>
+                <p class="text-left text-muted"><a href="mailto:aarushgoradia18@gmail.com?Subject=Write about Accelerated Reader">Write about this</a></p>
+            </div>
+        </div>
+        <div class="page-header" id="Achievements">
+            <h2>Achievements</h2>
+        </div>
+        <div class="bg-primary movie_head" data-toggle="collapse" data-target="#achievement">
+            Math league state champions 2021<i class="fa fa-sort-desk"></i>
+        </div>
+        <div id="achievement" class="collapse">
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 achievementID">
+                <img src="download%20(1).png" class="img-responsive img-thumbnail">
+            </div>
+        </div>
+        <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
+            <h5 class="text-left text-muted text-capitalize">Won Math League State Championship for 2021 year</h5>
+            <p class="text-left text-muted text-success"><a href="mailto:aarushgoradia18@gmail.com?Subject=Write about championship">Write about this</a></p>
+        </div>
+        <div class="bg-primary movie_head" data-toggle="collapse" data-target="#achievement2">
+            Blue ribbon school<i class="fa fa-sort-desk"></i>
+        </div>
+        <div id="achievement2" class="collapse">
+            <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 achievementID">
+                <img src="download%20(5).jfif" class="img-responsive img-thumbnail">
+            </div>
+        </div>
+        <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
+            <h5 class="text-left text-muted text-capitalize">Won blue ribbon school award for 3 years, which are 1999, 2006, and 2018 </h5>
+            <p class="text-left text-muted text-success"><a href="mailto:aarushgoradia18@gmail.com?Subject=Write about blue ribbon">Write about this</a></p>
         </div>
         <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="Contact">
             <h2>Contact Us</h2>
@@ -61,8 +114,8 @@
             <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3075.352782865051!2d-104.89060748536177!3d39.574198879472!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x876c85cb85775bbb%3A0x55b5dfb7f473bc15!2sWillow%20Creek%20Elementary%20School!5e0!3m2!1sen!2sus!4v1621049304414!5m2!1sen!2sus" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy"></iframe>
         </div>
         <a href="mailto:absrt@gmail.com?Subject=Feedback">
-        <h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;absrt@gmail.com</h5>
-    </a>
+            <h5><i class="fa fa-envelope"></i>&nbsp;&nbsp;absrt@gmail.com</h5>
+        </a>
         <h5><i class="fa fa-phone square"></i>&nbsp;&nbsp;8888888888</h5>
     </div>
 </body>
