--- a/index.html
+++ b/index.html
@@ -48,6 +48,7 @@
                 Feel free to ask any queries for Willow Creek using this phone number: 888-888-8887
             </marquee>
         </div>
+        <img id="logo" src="download.jpg">
         <div class="page-header" id="About">
             <h2>About The School</h2>
             <h3>Watch this inductory video to understand</h3>
