--- a/index.html
+++ b/index.html
@@ -85,11 +85,11 @@
             <h2>Achievements</h2>
         </div>
         <div class="bg-primary movie_head" data-toggle="collapse" data-target="#achievement">
-            Math league state champions 2021<i class="fa fa-sort-desk"></i>
+            <span id="name" class="glyphicon glyphicon-film">Math league state champions 2021<i class="fa fa-sort-desk"></i></span>
         </div>
         <div id="achievement" class="collapse">
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 achievementID">
-                <img src="download%20(1).png" class="img-responsive img-thumbnail">
+                <img src="download%20(1).png" class="img-responsive img-thumbnail" id="achievement pic">
             </div>
         </div>
         <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
@@ -97,11 +97,11 @@
             <p class="text-left text-muted text-success"><a href="mailto:aarushgoradia18@gmail.com?Subject=Write about championship">Write about this</a></p>
         </div>
         <div class="bg-primary movie_head" data-toggle="collapse" data-target="#achievement2">
-            Blue ribbon school<i class="fa fa-sort-desk"></i>
+            <span id="name2" class="glyphicon gyphicon-film">Blue ribbon school<i class="fa fa-sort-desk"></i></span>
         </div>
         <div id="achievement2" class="collapse">
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 achievementID">
-                <img src="download%20(5).jfif" class="img-responsive img-thumbnail">
+               <img src="download%20(5).jfif" class="img-responsive img-thumbnail" id="achievement2 pic">
             </div>
         </div>
         <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
