--- a/index.html
+++ b/index.html
@@ -32,6 +32,7 @@
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav" id="myNavbar">
+                <li><a href="#Logo">Logo</a></li>
                 <li><a href="#About">About the school</a></li>
                 <li><a href="#Achievements">Achievements</a></li>
                 <li><a href="#Staff">Staff</a></li>
@@ -48,7 +49,10 @@
                 Feel free to ask any queries for Willow Creek using this phone number: 888-888-8887
             </marquee>
         </div>
-        <img id="logo" src="download.jpg">
+        <div class="page-header" id="Logo">
+        <h2>Logo</h2>
+        <img id="logo" src="download.jpg"> 
+        </div>
         <div class="page-header" id="About">
             <h2>About The School</h2>
             <h3>Watch this inductory video to understand</h3>
