--- a/index.html
+++ b/index.html
@@ -34,10 +34,10 @@
             <ul class="nav navbar-nav" id="myNavbar">
                 <li><a href="#Logo">Logo</a></li>
                 <li><a href="#About">About the school</a></li>
-                <li><a href="#Achievements">Achievements</a></li>
-                <li><a href="#Staff">Staff</a></li>
                 <li><a href="#History">History</a></li>
-                <li><a href="#Help">Help</a></li>
+                <li><a href="#Staff">Staff</a></li>
+                <li><a href="#Achievements">Achievements</a></li>
+                <li><a href="#Updates">Updates</a></li>
                 <li><a href="#Contact">Contact us</a></li>
             </ul>
 
@@ -112,6 +112,18 @@
             <h5 class="text-left text-muted text-capitalize">Won blue ribbon school award for 3 years, which are 1999, 2006, and 2018 </h5>
             <p class="text-left text-muted text-success"><a href="mailto:aarushgoradia18@gmail.com?Subject=Write about blue ribbon">Write about this</a></p>
         </div>
+        <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="Updates">
+        <h2>Updates</h2>
+        </div>
+        <ul class="list-group">
+        <li class="list-group-item list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li">
+            <h4>Computer lab changed into GT room from the back room in library</h4>
+            <img src="download%20(1).jpg" class="img-responsive col-lg-7 col-md-7 col-sm-7 col-xs-12">
+            <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12">
+            Before the 2020-2021 school year, in the summer, the computer lab changed into the new GT room. The newly updated room is to the right of the ramp and on the left of second grade. Willow Creek removed the computers and donated them, since the computers were old. They took the items from the old GT room, which was the back room in the library, and replaced it. The back room in the library is used now for returning books with posters and tables. You go to the back room, and put the book on the table below your grade, which will be on the poster. The middle table in the computer lab was removed, but the sides were kept. 
+            </p>
+        </li>
+        </ul>
         <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="Contact">
             <h2>Contact Us</h2>
         </div>
