--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <a class="navbar-brand" href="https://www.cherrycreekschools.org/willowcreek">Willow Creek Elementary School</a>
+            <img src="download.jpg"><a class="navbar-brand" href="https://www.cherrycreekschools.org/willowcreek"></a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav" id="myNavbar">
