--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
                 <span class="icon-bar"></span>
                 <span class="icon-bar"></span>
             </button>
-            <img src="download.jpg"><a class="navbar-brand" href="https://www.cherrycreekschools.org/willowcreek"></a>
+            <a src="download.jpg" id="logofornav" href="https://www.cherrycreekschools.org/Page/93"></a>
         </div>
         <div class="collapse navbar-collapse">
             <ul class="nav navbar-nav" id="myNavbar">
