--- a/index.html
+++ b/index.html
@@ -50,8 +50,8 @@
             </marquee>
         </div>
         <div class="page-header" id="Logo">
-        <h2>Logo</h2>
-        <img id="logo" src="download.jpg"> 
+            <h2>Logo</h2>
+            <img id="logo" src="download.jpg">
         </div>
         <div class="page-header" id="About">
             <h2>About The School</h2>
@@ -85,6 +85,89 @@
                 <p class="text-left text-muted"><a href="mailto:aarushgoradia18@gmail.com?Subject=Write about Accelerated Reader">Write about this</a></p>
             </div>
         </div>
+        <div class="page-header" id="Staff">
+            <h2>Staff</h2>
+        </div>
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 book" id="aluminiList" data-toggle="modal" data-target="#staff1">
+            <img src="elise-wilcox-KIeRPMBRgtk-unsplash.jpg" class="img-responsive">
+            <hr />
+            <p class="text-primary">XYZ</p>
+        </div>
+        <div class="modal fade" id="staff1">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">XYZ</h4>
+                    </div>
+                    <div class="modal-body">
+                        <img src="elise-wilcox-KIeRPMBRgtk-unsplash.jpg" class="img-responsive img-modal">
+                        <p class="p_modal">Works as the principal for Willow Creek<br /><a href="#"><b>To learn more</b></a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 book" id="aluminiList" data-toggle="modal" data-target="#staff2">
+            <img src="elise-wilcox-KIeRPMBRgtk-unsplash.jpg" class="img-responsive">
+            <hr />
+            <p class="text-primary">XXX</p>
+        </div>
+        <div class="modal fade" id="staff2">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">XXX</h4>
+                    </div>
+                    <div class="modal-body">
+                        <img src="malik-skydsgaard-QrJIKM_U1m8-unsplash.jpg" class="img-responsive img-modal">
+                        <p class="p_modal">Works as the P.E teacher for Willow Creek<br /><a href="#"><b>To learn more</b></a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 book" id="aluminiList" data-toggle="modal" data-target="#staff3">
+            <img src="elise-wilcox-KIeRPMBRgtk-unsplash.jpg" class="img-responsive">
+            <hr />
+            <p class="text-primary">XGH</p>
+        </div>
+        <div class="modal fade" id="staff3">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">XGH</h4>
+                    </div>
+                    <div class="modal-body">
+                        <img src="marcus-p--wTtFwEfvZo-unsplash.jpg" class="img-responsive img-modal">
+                        <p class="p_modal">Works as the STEM teacher for Willow Creek<br /><a href="#"><b>To learn more</b></a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
+        <div class="col-lg-3 col-md-3 col-sm-3 col-xs-6 book" id="aluminiList" data-toggle="modal" data-target="#staff4">
+            <img src="elise-wilcox-KIeRPMBRgtk-unsplash.jpg" class="img-responsive">
+            <hr />
+            <p class="text-primary">XLK</p>
+        </div>
+        <div class="modal fade" id="staff4">
+            <div class="modal-dialog">
+                <div class="modal-content">
+                    <div class="modal-header">
+                        <button type="button" class="close" data-dismiss="modal">&times;</button>
+                        <h4 class="modal-title">XLK</h4>
+                    </div>
+                    <div class="modal-body">
+                        <img src="cole-keister-oumE4KeypcM-unsplash.jpg" class="img-responsive img-modal">
+                        <p class="p_modal">Works as the 5th grade teacher for Willow Creek<br /><a href="#"><b>To learn more</b></a></p>
+                    </div>
+                </div>
+            </div>
+        </div>
+
         <div class="page-header" id="Achievements">
             <h2>Achievements</h2>
         </div>
@@ -105,7 +188,7 @@
         </div>
         <div id="achievement2" class="collapse">
             <div class="col-lg-3 col-md-3 col-sm-3 col-xs-12 achievementID">
-               <img src="download%20(5).jfif" class="img-responsive img-thumbnail" id="achievement2 pic">
+                <img src="download%20(5).jfif" class="img-responsive img-thumbnail" id="achievement2 pic">
             </div>
         </div>
         <div class="col-lg-9 col-md-9 col-sm-9 col-xs-12 movie_text">
@@ -113,16 +196,16 @@
             <p class="text-left text-muted text-success"><a href="mailto:aarushgoradia18@gmail.com?Subject=Write about blue ribbon">Write about this</a></p>
         </div>
         <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="Updates">
-        <h2>Updates</h2>
+            <h2>Updates</h2>
         </div>
         <ul class="list-group">
-        <li class="list-group-item list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li">
-            <h4>Computer lab changed into GT room from the back room in library</h4>
-            <img src="download%20(1).jpg" class="img-responsive col-lg-7 col-md-7 col-sm-7 col-xs-12">
-            <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12">
-            Before the 2020-2021 school year, in the summer, the computer lab changed into the new GT room. The newly updated room is to the right of the ramp and on the left of second grade. Willow Creek removed the computers and donated them, since the computers were old. They took the items from the old GT room, which was the back room in the library, and replaced it. The back room in the library is used now for returning books with posters and tables. You go to the back room, and put the book on the table below your grade, which will be on the poster. The middle table in the computer lab was removed, but the sides were kept. 
-            </p>
-        </li>
+            <li class="list-group-item list-group-item-success col-lg-12 col-md-12 col-sm-12 col-xs-12 environment_li">
+                <h4>Computer lab changed into GT room from the back room in library</h4>
+                <img src="download%20(1).jpg" class="img-responsive col-lg-7 col-md-7 col-sm-7 col-xs-12">
+                <p class="list-group-item-text col-lg-7 col-md-7 col-sm-7 col-xs-12">
+                    Before the 2020-2021 school year, in the summer, the computer lab changed into the new GT room. The newly updated room is to the right of the ramp and on the left of second grade. Willow Creek removed the computers and donated them, since the computers were old. They took the items from the old GT room, which was the back room in the library, and replaced it. The back room in the library is used now for returning books with posters and tables. You go to the back room, and put the book on the table below your grade, which will be on the poster. The middle table in the computer lab was removed, but the sides were kept.
+                </p>
+            </li>
         </ul>
         <div class="page-header col-lg-12 col-md-12 col-sm-12 col-xs-12" id="Contact">
             <h2>Contact Us</h2>
@@ -135,6 +218,7 @@
         </a>
         <h5><i class="fa fa-phone square"></i>&nbsp;&nbsp;8888888888</h5>
     </div>
+    <div id="footer"></div>
 </body>
 
 </html>
